# polarsfit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LAZYFRAME_IMPLEMENTATION.md  LAZY_TEST_RESULTS.md  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt  test_lazy_real.py
.github/: dependabot.yml
.github/workflows/: docs.yml  update-precommit.yml
docs/: CSV_PERFORMANCE_RESULTS.md  FIT_PERFORMANCE_RESULTS.md  LAZY_TEST_RESULTS.md  README.md  REPOSITORY_ORGANIZATION.md
examples/: example.py
scripts/: hello_world.py
src/polarsfit/: __init__.py  _internal.pyi  fields.py
src/polarsfit/utils/: config.py  logger.py
src/rust/: expressions.rs  io.rs  lib.rs
tests/: TEST_REPORT.md  __init__.py  run_tests.py  test_adaptive_multi_file.py  test_advanced.py  test_basic.py  test_benchmark.py  test_fit_csv_comparison.py  test_fit_performance_comparison.py  test_lazy_comprehensive.py  test_lazy_correctness.py  test_lazy_evaluation.py  test_lazy_performance.py  test_lazy_real.py  test_polarsfit.py  test_strict_multi_file.py
