[package]
name = "polarsfit"
version = "0.1.0"
edition = "2021"

[lib]
name = "polarsfit"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
polars = { version = "0.44", features = ["lazy", "temporal", "strings", "dtype-datetime"] }
fit = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies.pyo3-polars]
version = "0.18"
features = ["derive", "lazy"]

[build-dependencies]
pyo3-build-config = "0.21"

[patch.crates-io]
fit = { path = "vendor/fit" }
