[project]
name = "polarsfit"
version = "0.1.0"
description = ""
authors = [
    { name = "Thomas Camminady", email = "0milieux_member@icloud.com" }
]
readme = "README.md"
repository = "https://github.com/thomascamminady/polarsfit"
homepage = "https://github.com/thomascamminady/polarsfit"
documentation = "https://thomascamminady.github.io/polarsfit"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.45.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "regex>=2024.11.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0",
    "psutil>=5.0",
    "rich>=13.9.4",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
    "maturin>=1.0,<2.0",
]
docs = [
    "pdoc>=14.0.0",
    "rich>=13.9.4",
]
test = [
    "pytest>=8.3.4",
    "pytest-benchmark>=4.0", 
    "psutil>=5.0",
]

[tool.ruff]
lint.ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D401",
    "E501",
]
line-length = 80
lint.select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]
exclude = [
  # VCS metadata
  ".git",
  ".github",

  # Virtual-envs & caches
  ".venv",
  "__pycache__",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",

  # Docs, data & notebooks
  "docs/**",

  # Non-Python files
  "*.md",
  "*.toml",
  "*.yaml",
  "*.yml",
  "*.html",
  "*.json",

  # Python bytecode
  "*.pyc",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = [
    "D200",
    "D400",
]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.maturin]
python-source = "src"
module-name = "polarsfit._internal"
